--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -68,7 +68,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"V1.5.abyssorangemix2_Hard\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.Deliberate_2\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\", \"V1.5.abyssorangemix2_Hard\", \"V1.5.abyssorangemix2_NSFW\"]\n",
+        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.Deliberate_2\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\", \"V1.5.abyssorangemix2_Hard\", \"V1.5.abyssorangemix2_NSFW\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "os.chdir(SDZ_install)\n",
@@ -77,10 +77,10 @@
         "SDZ_Models_Dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
-        "SDZ_Extensions = True #@param {type:\"boolean\"}\n",
-        "SDZ_ControlNet = True #@param {type:\"boolean\"}\n",
+        "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
+        "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
         "SDZ_Big_Models = True\n",
-        "SDZ_Upscalers = True #@param {type:\"boolean\"}\n",
+        "SDZ_Upscalers = False #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
@@ -125,15 +125,15 @@
         "  os.chdir(SDZ_webui_path)\n",
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
-        "  #!pip install triton\n",
+        "  !pip install triton\n",
         "  #!pip install triton==2.0.0.dev20221202.\n",
         "  #!git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
         "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "\n",
         "  #%cd models/Stable-diffusion\n",
-        "  #if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
+        "  if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
         "    #!pip install xformers==0.0.16rc425\n",
-        "    #!pip install open-clip-torch\n",
+        "    !pip install open-clip-torch\n",
         "\n",
         "# SDZ_Models\n",
         "  os.chdir(SDZ_webui_path)\n",
@@ -285,6 +285,16 @@
         "    #!git clone https://github.com/journey-ad/sd-webui-bilingual-localization.git\n",
         "    #!git clone https://github.com/hako-mikan/sd-webui-supermerger.git\n",
         "    #!git clone https://github.com/zero01101/openOutpaint-webUI-extension.git\n",
+        "    #!git clone https://github.com/Bing-su/sd-webui-tunnels.git\n",
+        "    #!git clone https://github.com/bbc-mc/sdweb-merge-block-weighted-gui.git\n",
+        "    #!git clone https://github.com/bbc-mc/sdweb-xyplus.git\n",
+        "    #!git clone https://github.com/KohakuBlueleaf/a1111-sd-webui-locon.git\n",
+        "    #!git clone https://github.com/arenatemp/stable-diffusion-webui-model-toolkit.git\n",
+        "    !git clone https://github.com/fishslot/video_loopback_for_webui.git\n",
+        "    !git clone https://github.com/etherealxx/batchlinks-webui.git\n",
+        "    !git clone https://github.com/mcmonkeyprojects/sd-dynamic-thresholding.git\n",
+        "    !git clone https://github.com/kohya-ss/sd-webui-additional-networks.git\n",
+        "    !git clone https://github.com/hnmr293/sd-webui-llul.git\n",
         "    !git clone https://github.com/hnmr293/sd-webui-cutoff.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "    %cd ..\n",
@@ -387,13 +397,15 @@
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
         "  if SDZ_Big_Models:\n",
-        "\n",
+        "    !sed -i 's/\"enable_quantization\": OptionInfo(False/\"enable_quantization\": OptionInfo(True/' $SDZ_install'/stable-diffusion-webui/modules/shared.py'\n",
+        "    \n",
         "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda'@\" $SDZ_webui_path'/modules/sd_models.py'\n",
         "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
         "    !sed -i \"s@map_location='cpu'@map_location='cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
         "    !sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
         "    !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'\n",
         "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
+        "    !sed -i \"s@'cpu'@'cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
         "  else:\n",
         "    #!sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
         "    #!sed -i \"s@map_location='cuda'@map_location='cpu'@\" $SDZ_webui_path'/modules/extras.py'\n",
