--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -118,7 +118,7 @@
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
         "  !pip install gradio\n",
-        "  !pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 torchtext==0.14.1 torchaudio==0.13.1 torchdata==0.5.1 --extra-index-url https://download.pytorch.org/whl/cu117\n",
+        "  #!pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 torchtext==0.14.1 torchaudio==0.13.1 torchdata==0.5.1 --extra-index-url https://download.pytorch.org/whl/cu117\n",
         "  #!pip install fastapi\n",
         "  #!pip install triton\n",
         "  #!pip install triton==2.0.0.dev20221202.\n",
@@ -264,17 +264,17 @@
         "    %cd extensions\n",
         "    #!git clone https://github.com/canisminor1990/sd-web-ui-kitchen-theme.git\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
+        "    #!git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
         "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
         "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
-        "    !git clone https://github.com/fkunn1326/openpose-editor.git\n",
+        "    #!git clone https://github.com/fkunn1326/openpose-editor.git\n",
         "    !git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser.git\n",
-        "    !git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git\n",
-        "    !git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
-        "    !git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
-        "    !git clone https://github.com/alemelis/sd-webui-ar.git\n",
-        "    !git clone https://github.com/hnmr293/posex.git\n",
-        "    !git clone https://github.com/nonnonstop/sd-webui-3d-open-pose-editor.git\n",
+        "    #!git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git\n",
+        "    #!git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
+        "    #!git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
+        "    #!git clone https://github.com/alemelis/sd-webui-ar.git\n",
+        "    #!git clone https://github.com/hnmr293/posex.git\n",
+        "    #!git clone https://github.com/nonnonstop/sd-webui-3d-open-pose-editor.git\n",
         "    #!git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
         "    #!git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
         "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
