--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -115,8 +115,8 @@
         "  os.chdir(SDZ_webui_path)\n",
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
-        "  !pip install gradio\n",
-        "  !pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 -f https://download.pytorch.org/whl/cu117/torch_stable.html\n",
+        "  #!pip install gradio\n",
+        "  #!pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 -f https://download.pytorch.org/whl/cu117/torch_stable.html\n",
         "  #!pip install fastapi\n",
         "  #!pip install triton\n",
         "  #!pip install triton==2.0.0.dev20221202.\n",
@@ -167,18 +167,19 @@
         "    %cd ..\n",
         "\n",
         "    %cd extensions\n",
+        "    #!git clone https://github.com/canisminor1990/sd-web-ui-kitchen-theme.git\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
+        "    #!git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
         "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
         "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
-        "    !git clone https://github.com/fkunn1326/openpose-editor.git\n",
+        "    #!git clone https://github.com/fkunn1326/openpose-editor.git\n",
         "    !git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser.git\n",
-        "    !git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git\n",
-        "    !git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
-        "    !git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
-        "    !git clone https://github.com/alemelis/sd-webui-ar.git\n",
-        "    !git clone https://github.com/hnmr293/posex.git\n",
-        "    !git clone https://github.com/nonnonstop/sd-webui-3d-open-pose-editor.git\n",
+        "    #!git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git\n",
+        "    #!git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
+        "    #!git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
+        "    #!git clone https://github.com/alemelis/sd-webui-ar.git\n",
+        "    #!git clone https://github.com/hnmr293/posex.git\n",
+        "    #!git clone https://github.com/nonnonstop/sd-webui-3d-open-pose-editor.git\n",
         "    #!git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
         "    #!git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
         "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
@@ -299,10 +300,10 @@
         "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda'@\" $SDZ_webui_path'/modules/sd_models.py'\n",
         "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
         "    !sed -i \"s@map_location='cpu'@map_location='cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
-        "    !sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
-        "    !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'\n",
-        "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
-        "    !sed -i \"s@'cpu'@'cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
+        "    #!sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
+        "    #!sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'\n",
+        "    #!sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
+        "    #!sed -i \"s@'cpu'@'cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
         "    !sed -i \"s/                    print(strings.en\\[\\\"SHARE_LINK_MESSAGE\\\"\\])/                    print('\u001b[1;90m')/\" '/usr/local/lib/python3.9/dist-packages/gradio/blocks.py'\n",
         "\n",
         "    clear_output()\n",
