--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -115,6 +115,9 @@
         "  os.chdir(SDZ_webui_path)\n",
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
+        "  !pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
+        "  !pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
+        "  !pip install gradio\n",
         "  #!pip install gradio\n",
         "  #!pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 -f https://download.pytorch.org/whl/cu117/torch_stable.html\n",
         "  #!pip install fastapi\n",
@@ -324,7 +327,6 @@
         "    !python launch.py $share SDZconfigV2"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "NEZcwP9uS5sm"
       },
       "execution_count": null,
