--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -118,11 +118,7 @@
         "  !pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
         "  !pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
         "  !pip install gradio\n",
-        "  #!pip install gradio\n",
-        "  #!pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 -f https://download.pytorch.org/whl/cu117/torch_stable.html\n",
         "  #!pip install fastapi\n",
-        "  #!pip install triton\n",
-        "  #!pip install triton==2.0.0.dev20221202.\n",
         "  #!git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
         "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "\n",
@@ -327,7 +323,8 @@
         "    !python launch.py $share SDZconfigV2"
       ],
       "metadata": {
-        "id": "NEZcwP9uS5sm"
+        "id": "NEZcwP9uS5sm",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
