--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -50,12 +50,11 @@
         "##@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>SDZboton</font> <a href=\"https://pbs.twimg.com/profile_images/1022127431447195649/ASyO_yY3_400x400.jpg\"><font face='Verdana Regular' color='#80ff3' size='4'>SDZboton</font></a>\n",
         "import os\n",
         "import shutil\n",
-        "from IPython.utils import capture\n",
-        "from IPython.display import clear_output\n",
         "import sys\n",
         "import fileinput\n",
         "import time\n",
-        "\n",
+        "from IPython.utils import capture\n",
+        "from IPython.display import clear_output, display, HTML\n",
         "from datetime import timedelta\n",
         "from google.colab import drive\n",
         "from IPython.utils import capture\n",
@@ -67,26 +66,22 @@
         "except:\n",
         "  start_colab = int(time.time())-5\n",
         "clear_output()\n",
-        "print(\"\\\u001b[1;96m\") #Cyan text\n",
-        "\n",
+        "print(\"\u001b[1;90m\") #Cyan text\n",
         "\n",
         "try:\n",
         "  output \n",
         "except:\n",
-        "  print('⌚ Checking GPU...', end='')\n",
+        "  print('Checking GPU...', end='')\n",
         "  output = getoutput('nvidia-smi --query-gpu=gpu_name --format=csv')\n",
         "  if \"name\" in output:\n",
         "    gpu_name = output[5:]\n",
-        "    print('\\r Current GPU:', gpu_name, flush=True)\n",
+        "    print('\\rCurrent GPU:', gpu_name, flush=True)\n",
         "  else:\n",
-        "    print('\\r\\\u001b[1;96m ERROR: No GPU detected. Please do step below to enable.\\n', flush=True)\n",
+        "    print('\\r\\\u001b[1;90m ERROR: No GPU detected. Please do step below to enable.\\n', flush=True)\n",
         "    display(HTML(\"<img src='https://i.ibb.co/HC9KH17/NVIDIA-Share-23-01-02-173037.png' width='800px'/>\"))\n",
-        "    print('\\\u001b[1;96m\\nIf it says \"Cannot connect to GPU backend\", meaning you\\'ve either reached free usage limit. OR there\\'s no gpu available.\\n\\nDon\\'t mind me... I\\'m destroying your current session for your own good...')\n",
-        "    display(HTML(\"<img src='https://media.tenor.com/E9omRGF7x0AAAAAC/hitori-gotou-bocchi-rock.gif' width='500px'/>\"))\n",
         "    time.sleep(5)\n",
         "    from google.colab import runtime\n",
         "    runtime.unassign()\n",
-        "\n",
         "\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" \n",
@@ -109,6 +104,7 @@
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "#share = \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "share = SDZ_Args\n",
+        "stable_build = False\n",
         "\n",
         "# SDZ_RunSDZ\n",
         "if not SDZ_Continue: \n",
@@ -121,12 +117,8 @@
         "      !git clone --depth 1 https://github.com/AUTOMATIC1111/stable-diffusion-webui SDZ\n",
         "\n",
         "    %cd SDZ\n",
-        "    #!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
-        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user4.css -O user.css\n",
-        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/multi_frame_render.py -O /scripts/multi_frame_render.py\n",
-        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/Upscalers.txt\n",
-        "    #!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/api.py -O modules/api/api.py\n",
-        "    \n",
+        "    import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(SDZ_webui_path+'/''SDZ_Files.txt') for executor in [ThreadPoolExecutor(max_workers=len(open(SDZ_webui_path+'/''SDZ_Files.txt').readlines()))]];\n",
+        "\n",
         "    clear_output()\n",
         "  print('\u001b[1;96mInstalling SDZ ✓')\n",
         "\n",
@@ -174,17 +166,17 @@
         "    !apt install -qq libunwind8-dev\n",
         "    %env LD_PRELOAD=libtcmalloc.so\n",
         "    os.environ['PYTORCH_CUDA_ALLOC_CONF'] = \"garbage_collection_threshold:0.9,max_split_size_mb:512\"\n",
-        "    !rm /content/SDZ/extensions/sd-webui-tunnels/id_rsa.pub /content/sdw/extensions/sd-webui-tunnels/id_rsa\n",
+        "    !rm /content/SDZ/extensions/sd-webui-tunnels/id_rsa.pub /content/SDZ/extensions/sd-webui-tunnels/id_rsa\n",
         "    del cap\n",
         "  if not os.path.exists(hypernetworks_dir):\n",
         "    os.makedirs(hypernetworks_dir)\n",
         "  # if not 'T4' in gpu_name:  # [For colab makers out there, facebook's xformers pypi already support almost all gpu now]\n",
         "  #   !pip uninstall -y xformers\n",
         "  install_time = timedelta(seconds=time.time()-start_install)\n",
-        "  print(\"\\r🚀 Finished unpacking. Took\",\"%02d:%02d:%02d ⚡\\n\" % (install_time.seconds / 3600, (install_time.seconds / 60) % 60, install_time.seconds % 60), end='', flush=True)\n",
+        "  print(\"\\r Finished unpacking. Took\",\"%02d:%02d:%02d ⚡\\n\" % (install_time.seconds / 3600, (install_time.seconds / 60) % 60, install_time.seconds % 60), end='', flush=True)\n",
         "  # Colab 🤝 Gradio (Colab timer integration for gradio)\n",
         "  !echo -n {start_colab} > /content/SDZ/static/colabTimer.txt\n",
-        "  print(\"🤝 Colab timer integration complete! You can see your colab time inside webui.\")\n",
+        "  print(\" Colab timer integration complete! You can see your colab time inside webui.\")\n",
         "\n",
         "# SDZ_Requirements\n",
         "with capture.capture_output() as cap:\n",
@@ -192,8 +184,8 @@
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
         "\n",
-        "  import os\n",
-        "  from google.colab.output import eval_js#\n",
+        "#  import os\n",
+        "#  from google.colab.output import eval_js\n",
         "#  os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
         "#  %env TF_CPP_MIN_LOG_LEVEL=1\n",
         "#  !apt -y update -qq\n",
@@ -205,11 +197,10 @@
         "#  !dpkg -i *.deb\n",
         "#  %env LD_PRELOAD=libtcmalloc.so\n",
         "#  !rm *.deb\n",
-        "  !pip install svglib --prefer-binary\n",
-        "  !pip install git+https://github.com/deeplook/svglib.git\n",
-        "\n",
-        "\n",
-        "\n",
+        "  !pip install svglib\n",
+        "  !sudo apt-get install libcairo2-dev\n",
+        "  !pip install ImageReward\n",
+        "  \n",
         "  !pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
         "  !pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
         "  !pip install gradio\n",
@@ -249,7 +240,7 @@
         "    !wget --timestamping https://civitai.com/api/download/models/5616 -O 15Deliberate_1.1.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.Deliberate_2\":\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://civitai.com/api/download/models/15236 -o 15Deliberate_2.safetensors\n",
+        "    !gdown --no-cookies https://civitai.com/api/download/models/15236 -O 15Deliberate_2.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.URPM\":\n",
         "    !wget --timestamping https://civitai.com/api/download/models/15640 -O 15URPM.safetensors\n",
@@ -372,44 +363,7 @@
         "    %cd ..\n",
         "\n",
         "    %cd extensions\n",
-        "    #!git clone https://github.com/canisminor1990/sd-web-ui-kitchen-theme.git\n",
-        "    #!git clone https://github.com/v8hid/infinite-zoom-automatic1111-webui.git\n",
-        "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
-        "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
-        "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
-        "    #!git clone https://github.com/fkunn1326/openpose-editor.git\n",
-        "    !git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser.git\n",
-        "    #!git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git\n",
-        "    #!git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
-        "    #!git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
-        "    #!git clone https://github.com/alemelis/sd-webui-ar.git\n",
-        "    #!git clone https://github.com/hnmr293/posex.git\n",
-        "    #!git clone https://github.com/nonnonstop/sd-webui-3d-open-pose-editor.git\n",
-        "    #!git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
-        "    #!git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
-        "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
-        "    #!git clone https://github.com/s9roll7/ebsynth_utility.git\n",
-        "    #!git clone https://github.com/journey-ad/sd-webui-bilingual-localization.git\n",
-        "    #!git clone https://github.com/hako-mikan/sd-webui-supermerger.git\n",
-        "    #!git clone https://github.com/zero01101/openOutpaint-webUI-extension.git\n",
-        "    #!git clone https://github.com/Bing-su/sd-webui-tunnels.git\n",
-        "    #!git clone https://github.com/bbc-mc/sdweb-merge-block-weighted-gui.git\n",
-        "    #!git clone https://github.com/bbc-mc/sdweb-xyplus.git\n",
-        "    #!git clone https://github.com/KohakuBlueleaf/a1111-sd-webui-locon.git\n",
-        "    #!git clone https://github.com/arenatemp/stable-diffusion-webui-model-toolkit.git\n",
-        "    #!git clone https://github.com/fishslot/video_loopback_for_webui.git\n",
-        "    !git clone https://github.com/etherealxx/batchlinks-webui.git\n",
-        "    #!git clone https://github.com/mcmonkeyprojects/sd-dynamic-thresholding.git\n",
-        "    #!git clone https://github.com/kohya-ss/sd-webui-additional-networks.git\n",
-        "    #!git clone https://github.com/hnmr293/sd-webui-llul.git\n",
-        "    #!git clone https://github.com/hnmr293/sd-webui-cutoff.git\n",
-        "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-rembg\n",
-        "    !git clone https://github.com/camenduru/sd-webui-tunnels\n",
-        "    #!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface\n",
-        "    #!git clone https://github.com/deforum-art/deforum-for-automatic1111-webui  \n",
-        "    #!wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py\n",
-        "    #!git clone https://github.com/CiaraStrawberry/TemporalKit.git\n",
+        "    import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(SDZ_webui_path+'/''SDZ_Extensions.txt') for executor in [ThreadPoolExecutor(max_workers=len(open(SDZ_webui_path+'/''SDZ_Extensions.txt').readlines()))]];\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "    %cd ..\n",
         "\n",
@@ -423,30 +377,7 @@
         "    #!sed -i 's/1, \"Multi ControlNet/4, \"Multi ControlNet/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
         "    #!sed -i 's/False, \"Allow other script to control this extension/True, \"Allow other script to control this extension/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
         "    %cd sd-webui-controlnet/models\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_canny.pth -o control_v11p_sd15_canny.pth\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11f1p_sd15_depth.pth -o control_v11f1p_sd15_depth.pth\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_lineart.pth -o control_v11p_sd15_lineart.pth\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_mlsd.pth -o control_v11p_sd15_mlsd.pth\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_normalbae.pth -o control_v11p_sd15_normalbae.pth\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_openpose.pth -o control_v11p_sd15_openpose.pth\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_scribble.pth -o control_v11p_sd15_scribble.pth\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_seg.pth -o control_v11p_sd15_seg.pth\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11e_sd15_ip2p.pth -o control_v11e_sd15_ip2p.pth\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11e_sd15_shuffle.pth -o control_v11e_sd15_shuffle.pth\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_inpaint.pth -o control_v11p_sd15_inpaint.pth\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_softedge.pth -o control_v11p_sd15_softedge.pth\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15s2_lineart_anime.pth -o control_v11p_sd15s2_lineart_anime.pth\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11f1e_sd15_tile.pth -o control_v11f1e_sd15_tile.pth\n",
-        "    \n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_canny-fp16.safetensors -o t2iadapter_canny-fp16.safetensors\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_color-fp16.safetensors -o t2iadapter_color-fp16.safetensors\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_depth-fp16.safetensors -o t2iadapter_depth-fp16.safetensors\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_keypose-fp16.safetensors -o t2iadapter_keypose-fp16.safetensors\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_openpose-fp16.safetensors -o t2iadapter_openpose-fp16.safetensors\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_seg-fp16.safetensors -o t2iadapter_seg-fp16.safetensors\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_sketch-fp16.safetensors -o t2iadapter_sketch-fp16.safetensors\n",
-        "    !aria2c -x16 -s50 --file-allocation=none https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_style-fp16.safetensors -o t2iadapter_style-fp16.safetensors\n",
-        "\n",
+        "    import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(SDZ_webui_path+'/''SDZ_ControlNet.txt') for executor in [ThreadPoolExecutor(max_workers=len(open(SDZ_webui_path+'/''SDZ_ControlNet.txt').readlines()))]];\n",
         "    !cp cldm_v15.yaml cldm_v21.yaml {os.path.join(SDZ_webui_path, 'models')}\n",
         "    %cd ../../..\n",
         "\n",
@@ -533,8 +464,12 @@
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "if SDZ_Version == \"V1.5\":\n",
         "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" REQS_FILE=\"requirements_versions.txt\" python launch.py \n",
+        "\n",
+        "elif SDZ_Version == \"V2.1\":\n",
+        "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" REQS_FILE=\"requirements_versions.txt\" python launch.py SDZconfigV2\n",
+        "\n",
         "time_since_start = timedelta(seconds=time.time()-start_colab)\n",
-        "print(\"\\n\\n\\033[96m⌚ You've been running this colab for\",\"%02d:%02d:%02d\" % (time_since_start.seconds / 3600, (time_since_start.seconds / 60) % 60, time_since_start.seconds % 60))\n",
+        "print(\"\\n\\n\u001b[1;96mYou've been running this colab for\",\"%02d:%02d:%02d\" % (time_since_start.seconds / 3600, (time_since_start.seconds / 60) % 60, time_since_start.seconds % 60))\n",
         "print(\"\\n\\n\")\n",
         "\n",
         "\n"
@@ -1553,7 +1488,6 @@
         "\n"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "4A1tPn-TNiYH"
       },
       "execution_count": null,
@@ -1640,7 +1574,9 @@
         "#  !dpkg -i *.deb\n",
         "#  %env LD_PRELOAD=libtcmalloc.so\n",
         "#  !rm *.deb\n",
-        "\n",
+        "  !pip install svglib\n",
+        "  !sudo apt-get install libcairo2-dev\n",
+        "  !pip install pycairo\n",
         "\n",
         "  !pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
         "  !pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
